email-forgot-template updated

--- a/mail-body/email-template-forgot-password.ejs
+++ b/mail-body/email-template-forgot-password.ejs
@@ -107,7 +107,7 @@
 <body>
   <div class="card">
     <div class="sense-live-wrapper">
-      <img src='../../../assets/favicon.ico' class="sense-live-img" alt="SenseLive">
+      <img src='./assets/favicon.ico' class="sense-live-img" alt="SenseLive">
       <div class="h2">SenseLive</div>
     </div>
     <h2 style="color: #c81a37;">Welcome to our Application !</h2>
