--- a/mail-body/email-template-forgot-password.ejs
+++ b/mail-body/email-template-forgot-password.ejs
@@ -17,24 +17,25 @@
       height: 100vh;
     }
 
-    .sense-live-img {
-      height: 50px;
-      width: 50px;
-      margin-right: 10px;
-    }
 
     .h2 {
+      line-height: 50px;
       font-size: 1.5rem;
       padding: 0;
       margin: 0;
       color: white;
+      text-align: center;
     }
 
     .sense-live-wrapper {
       display: flex;
       justify-content: center;
       align-items: center;
-      
+    }
+    img{
+      height: 80%;
+      width: 100%;
+      border-radius: 20px;
     }
 
     .card {
@@ -49,8 +50,6 @@
       max-width: 500px;
       box-sizing: border-box;
       margin: 20px;
-      display: flex;
-      flex-direction: column;
       justify-content: center;
     }
 
@@ -107,12 +106,11 @@
 <body>
   <div class="card">
     <div class="sense-live-wrapper">
-      <img src='./assets/favicon.ico' class="sense-live-img" alt="SenseLive">
-      <div class="h2">SenseLive</div>
-    </div>
+      <img src="https://media.licdn.com/dms/image/D5612AQHPQWU3siHfYA/article-cover_image-shrink_720_1280/0/1684784182727?e=2147483647&v=beta&t=yIGSsGmlDvMicc-OxXeofaHeM2A8jd4fcgHAWP-G2uc" alt="">
+     </div>
     <h2 style="color: #c81a37;">Welcome to our Application !</h2>
-    <p>Your registration token is <span class="token"><%= resetToken %></span><br>Please click the button below to verify your email</p>
-    <a href="https://localhost:4200/login/verify-user?token=<%= token %>">
+    <p>Please click the button below to verify your email</p>
+    <a href="http://localhost:4200/#/authentication/reset-pwd?token=<%= resetToken %>">
       <button>Reset</button>
     </a>
   </div>
